added formulas for Actuation Specifiacation

--- a/specs/python/main.ipynb
+++ b/specs/python/main.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Robot\n",
-    "\n",
-    "## Chip Specification\n",
+    "# Specification\n",
     "\n",
     "In This python file the Design Specifications for Chip [tt10-uR-IPs](https://github.com/jonoboderbonobo/tt10-uR-IPs) is investigated. Not much thought has been put into those Specifications, but designing a Chip without a goal in mind seems boring. Therefore some rough estimates will be made. So let's make a Robot!"
    ]
@@ -42,27 +40,40 @@
     "| Environment Solid (Ground)| variable (SiO2)       |\n",
     "\n",
     "\n",
+    "The Requirements can be split into: \n",
+    "Actuation which has effect on Energy Harvesting and Driver Specification\n",
+    "Communication speed which has effect on clock frequency\n",
+    "Sensor quality. So how many Sensors, what ADC resolution and sampling rate. Effects mostly size of ADCs but also Communication Speed and maybe some buffer memory\n",
+    "\n",
+    "In this first Iteration I mainly focus on Actuation and minimal Communication capabilities without any Sensors. Therefore no ADCs needed and Communication is mainly used for\n",
+    "Position detection and getting commands from outside to change direction or change movement speed.\n",
+    "\n",
     "\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Imports"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sympy\n",
     "from sympy import symbols, Eq, sqrt, pi, latex, solveset\n",
-    "from IPython.display import display, Markdown\n",
+    "from IPython.display import display, Markdown, Math\n",
     "import sympy.physics.units as u\n",
     "from sympy.physics.units import milli, micro, centi, giga, mega, kilo, nano, pico\n",
     "from sympy.physics.units import convert_to\n",
-    "\n",
-    "# Enable pretty-printing in Jupyter \n",
-    "sympy.init_printing()\n",
-    "\n",
-    "\n",
     "from sympy import Rational, pi\n",
+    "\n",
+    "\n",
+    "\n",
     "percent = percents = Rational(1, 100)\n",
     "permille = permille = Rational(1, 1000)\n",
     "\n",
@@ -103,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -206,9 +217,7 @@
        "$\\displaystyle A = \\frac{193}{63}$"
       ],
       "text/plain": [
-       "    193\n",
-       "A = ───\n",
-       "    63 "
+       "Eq(A, 193/63)"
       ]
      },
      "metadata": {},
@@ -220,7 +229,7 @@
        "$\\displaystyle B = 1$"
       ],
       "text/plain": [
-       "B = 1"
+       "Eq(B, 1)"
       ]
      },
      "metadata": {},
@@ -232,27 +241,18 @@
        "$\\displaystyle C = \\frac{3936}{3875}$"
       ],
       "text/plain": [
-       "    3936\n",
-       "C = ────\n",
-       "    3875"
+       "Eq(C, 3936/3875)"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
-   "source": [
-    "A, B, C = symbols('A B C')\n",
-    "#s.E = symbols('E_s')\n",
-    "E_ratio = Eq(A, s.E/p.E) #Ratio of Young's Modulus\n",
-    "h_ratio = Eq(B, s.h/p.h) #Ratio of height\n",
-    "density_ratio = Eq(C, s.rho/p.rho) #Ratio of density\n",
-    "display(E_ratio, h_ratio, density_ratio)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -261,10 +261,10 @@
        "$\\displaystyle 12 \\text{V}$"
       ],
       "text/plain": [
-       "12⋅volt"
+       "12*volt"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,11 +277,281 @@
     "V_max = p.E_c * p.h\n",
     "V_max"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Base piezoelectric Actuation equations "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Axial Mode"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\delta_{33} = V d_{33}$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle F_{b} = \\frac{E_{33} V d_{33} l w}{h}$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle K_{m} = \\frac{E_{33} l w}{h}$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle f_{r} = \\frac{N_{3}}{h}$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "Transversal Mode"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\delta_{31} = - \\frac{V d_{31} w}{h}$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle F_{b} = - E_{11} V d_{31} l$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle K_{m} = \\frac{E_{11} h l}{w}$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle f_{r} = \\frac{N_{1}}{w}$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "\n",
+    "# Define symbols\n",
+    "d_33, V, d_31, l, w, h, E_33, E_11, e, K_m, f_r, N_3, N_1, delta_33, F_b, delta_31 = symbols('d_{33} V d_{31} l w h E_{33} E_{11} e K_m f_r N_3 N_1 delta_33 F_b delta_31')\n",
+    "\n",
+    "# Define equations\n",
+    "ax_displacement = Eq(delta_33, d_33 * V)\n",
+    "ax_Fb = Eq(F_b, (l * w / h) * E_33 * d_33 * V)\n",
+    "ax_coupling = Eq(K_m, (l * w / h) * E_33)\n",
+    "ax_resonance = Eq(f_r, N_3 / h)\n",
+    "\n",
+    "\n",
+    "tran_displacement = Eq(delta_31, - (w / h) * d_31 * V)\n",
+    "tran_Fb = Eq(F_b, - l * E_11 * d_31 * V) # Blocking force. Maximum Force the Actuator can exert when its displacement is blocked. Aka the Force that can overcome fluid drag and friction\n",
+    "tran_coupling = Eq(K_m, (h * l / w) * E_11) # Electromechanical coupling factor. Higher is better. Max value is 1\n",
+    "tran_resonance = Eq(f_r, N_1 / w)\n",
+    "\n",
+    "# Display equations\n",
+    "display(Markdown('Axial Mode'))\n",
+    "for eq in [ax_displacement, ax_Fb, ax_coupling, ax_resonance]:\n",
+    "    display(Math(latex(eq)))\n",
+    "display(Markdown('Transversal Mode'))\n",
+    "for eq in [tran_displacement, tran_Fb, tran_coupling, tran_resonance]:\n",
+    "    display(Math(latex(eq)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Szenario of Rectangular unimporph piezo actuator fixed to an elastic Layer (e.g Steel)\n",
+    "Metin Sitti Page 102\n",
+    "base Source [208]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle A = \\frac{193}{63}$"
+      ],
+      "text/plain": [
+       "Eq(A, 193/63)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle B = 1$"
+      ],
+      "text/plain": [
+       "Eq(B, 1)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle C = \\frac{3936}{3875}$"
+      ],
+      "text/plain": [
+       "Eq(C, 3936/3875)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "E_steel, E_pzt = symbols('E_steel E_pzt')\n",
+    "E_steel = s.E # Young's Modulus of Steel\n",
+    "E_pzt = p.E # Young's Modulus of PZT\n",
+    "\n",
+    "h_steel, h_pzt = symbols('h_steel h_pzt') \n",
+    "h_steel = s.h # Height of Steel\n",
+    "h_pzt = p.h # Height of PZT\n",
+    "\n",
+    "A, B, C, D= symbols('A B C D')\n",
+    "\n",
+    "E_ratio = Eq(A, E_steel/E_pzt) #Ratio of Young's Modulus\n",
+    "h_ratio = Eq(B, h_steel/h_pzt) #Ratio of height\n",
+    "density_ratio = Eq(C, s.rho/p.rho) #Ratio of density\n",
+    "\n",
+    "display(E_ratio, h_ratio, density_ratio)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Circuit Estimation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Requirements on Driver\n",
+    "\n",
+    "- **Voltage Level (Displacement):** As high as possible for maximum displacement. At this scale, it is limited by the breakdown voltage of the piezo actuator rather than MOSFETs.\n",
+    "- **Current Level (Speed):** Low enough resistance, i.e., high enough current for the respective oscillation frequency of the actuator. The limiting factors could be:\n",
+    "    - Heat dissipation of MOSFETs inside the driver circuit\n",
+    "    - Heat dissipation of the piezo crystal\n",
+    "    - Frequency where actuation is efficient due to gait, friction, drag, and mechanical quality factor "
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv_anac_tt10_specs",
+   "display_name": "vtt10",
    "language": "python",
    "name": "python3"
   },
@@ -295,7 +565,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
