added Introduction to microrobotics in githubs main readme file

--- a/docs/specs/rambling.ipynb
+++ b/docs/specs/rambling.ipynb
@@ -11,25 +11,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Symbolic Equation:\n"
+      "Symbolic Equation:\n",
+      "    ρₛ\n",
+      "R = ──\n",
+      "    ρₚ\n"
      ]
     },
     {
      "ename": "NameError",
-     "evalue": "name 'pprint' is not defined",
+     "evalue": "name 'sp' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[23], line 36\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[38;5;66;03m# Display the symbolic equation.\u001b[39;00m\n\u001b[1;32m     35\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSymbolic Equation:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 36\u001b[0m \u001b[43mpprint\u001b[49m(eq_symbolic)\n\u001b[1;32m     38\u001b[0m \u001b[38;5;66;03m# If you solve the symbolic equation, you get the symbolic solution.\u001b[39;00m\n\u001b[1;32m     39\u001b[0m solution_symbolic \u001b[38;5;241m=\u001b[39m sp\u001b[38;5;241m.\u001b[39msolve(eq_symbolic, R)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pprint' is not defined"
+      "Cell \u001b[0;32mIn[1], line 39\u001b[0m\n\u001b[1;32m     36\u001b[0m pprint(eq_symbolic)\n\u001b[1;32m     38\u001b[0m \u001b[38;5;66;03m# If you solve the symbolic equation, you get the symbolic solution.\u001b[39;00m\n\u001b[0;32m---> 39\u001b[0m solution_symbolic \u001b[38;5;241m=\u001b[39m \u001b[43msp\u001b[49m\u001b[38;5;241m.\u001b[39msolve(eq_symbolic, R)\n\u001b[1;32m     40\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mSymbolic Solution:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     41\u001b[0m pprint(solution_symbolic)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sp' is not defined"
      ]
     }
    ],
