--- a/docs/specs/P_Conv.ipynb
+++ b/docs/specs/P_Conv.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
        "12.0*volt"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
     {
      "data": {
       "text/plain": [
-       "[4.12e-10*meter]"
+       "[V*d_{33}]"
       ]
      },
      "metadata": {},
@@ -511,7 +511,7 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\delta_{33} = 4.12 \\cdot 10^{-10} \\text{m}$"
+       "$\\displaystyle \\delta_{33} = V d_{33}$"
       ],
       "text/plain": [
        "<IPython.core.display.Math object>"
@@ -551,9 +551,14 @@
     "</p>\n",
     "\n",
     "Source: 10.1109/ROBOT.2001.933216 \n",
-    "\n",
+    "<br>\n",
     "https://ieeexplore.ieee.org/document/933216\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
     "![image.png](attachment:image.png)\n",
+    "\n",
     "\n",
     "$\n",
     "\\begin{align}\n",
@@ -563,9 +568,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'R_E' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m eq_R_E \u001b[38;5;241m=\u001b[39m Eq(\u001b[43mR_E\u001b[49m,R_E\u001b[38;5;241m.\u001b[39mval)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'R_E' is not defined"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "eq_R_E = Eq(R_E,R_E.val)\n",
