--- a/docs/specs/main.ipynb
+++ b/docs/specs/main.ipynb
@@ -27,36 +27,7 @@
     "\n",
     "\n",
     "**Mathjax config Source**:\n",
-    "[fabriziomusacchio](https://www.fabriziomusacchio.com/blog/2021-08-10-How_to_use_LaTeX_in_Markdown/)\n",
-    "\n",
-    "**Test Display for MathJax>**\n",
-    "$\n",
-    "\\begin{align}\n",
-    "\\nabla \\cdot \\mathbf{E} &= \\frac{\\rho}{\\epsilon_0}, \\\\\n",
-    "\\nabla \\cdot \\mathbf{B} &= 0, \\\\\n",
-    "\\nabla \\times \\mathbf{E} &= - \\frac{\\partial \\mathbf{B}}{\\partial t}, \\\\\n",
-    "\\nabla \\times \\mathbf{B} &= \\mu_0 \\mathbf{J} \n",
-    "    + \\mu_0 \\epsilon_0 \\frac{\\partial \\mathbf{E}}{\\partial t}.\n",
-    "\\end{align}\n",
-    "$\n",
-    "\n",
-    "with\n",
-    "\n",
-    "$\n",
-    "\\begin{aligned}\n",
-    "\\mathbf{E} &\\quad \\text{Electric field (V/m)} \\\\\n",
-    "\\mathbf{B} &\\quad \\text{Magnetic field (T)} \\\\\n",
-    "\\rho &\\quad \\text{Charge density (C/m³)} \\\\\n",
-    "\\mathbf{J} &\\quad \\text{Current density (A/m²)} \\\\\n",
-    "\\epsilon_0 &\\quad \\text{Permittivity of free space} \\quad (\\approx 8.85 \\times 10^{-12} \\, \\text{F/m}) \\\\\n",
-    "\\mu_0 &\\quad \\text{Permeability of free space} \\quad (\\approx 4\\pi \\times 10^{-7} \\, \\text{H/m}) \\\\\n",
-    "\\nabla \\cdot &\\quad \\text{Divergence operator} \\\\\n",
-    "\\nabla \\times &\\quad \\text{Curl operator} \\\\\n",
-    "\\frac{\\partial}{\\partial t} &\\quad \\text{Partial derivative with respect to time} \\\\\n",
-    "\\end{aligned}\n",
-    "$\n",
-    "\n",
-    "[comment]: <> (\\label{eq:one} does nto work)"
+    "[fabriziomusacchio](https://www.fabriziomusacchio.com/blog/2021-08-10-How_to_use_LaTeX_in_Markdown/)"
    ]
   },
   {
@@ -125,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# High Level Requirements\n",
+    "# Requirements (High-Level)\n",
     "\n",
     "### Hard Requirements\n",
     "\n",
@@ -153,10 +124,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#  Low Level Requirements\n",
-    "I will call those subsequent attributes Low Level Requirements rather than Specifications to emphesize on its downward relation from different Levels on abstraction. I aim to actually only call the \"deepest level\" of variables I am able to make changes to specification (e.g. width of Actuator1, clock frequency, ...)\n",
+    "# Design Steps (Power System)\n",
+    "- Determine Model for Locomotion and Actuation\n",
+    "- From HL-Requirements and Actuation Model determine Actuation Requirements\n",
+    "- From Actuation Requirements determine Drivers requirements\n",
+    "- check if its in range of Power Harvesting possibilities\n",
     "\n",
-    "The Requirements can be split into Power Requirements and Data requirements.\n",
+    "# Design Steps (Information System)\n",
+    "- Determine needed Data Rate\n",
+    "- Determine needed Clock Speed\n",
+    "- Determine needed Clock Stability\n",
+    "- Determine needed Frequencies\n",
+    "- Either add additional oscialltors or Frequency dividers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Requirements on Driver\n",
+    "\n",
+    "- **Voltage Level (Displacement):** As high as possible for maximum displacement. At this scale, it is limited by the breakdown voltage of the piezo actuator rather than MOSFETs.\n",
+    "- **Current Level (Speed):** Low enough resistance, i.e., high enough current for the respective oscillation frequency of the actuator. The limiting factors could be:\n",
+    "    - Heat dissipation of MOSFETs inside the driver circuit\n",
+    "    - Heat dissipation of the piezo crystal\n",
+    "    - Frequency where actuation is efficient due to gait, friction, drag, and mechanical quality factor "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#  Requirements (Low-Level)\n",
+    "\n",
+    "Those lower level requirements can be split into Power Requirements and Data Requirements.\n",
     "\n",
     "## Power Requirements\n",
     "\n",
@@ -271,126 +272,6 @@
     "| Power Consumption                  | Watts (W) or µW                | Energy required to operate the communication circuit.                        |\n",
     "\n",
     "---\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#  Comparison and Design Goals\n",
-    "\n",
-    "\n",
-    "\n",
-    "## Power requirements:\n",
-    "### Power Harvesting (PH) \n",
-    "(e.g Photovoltaic Cells)\n",
-    "\n",
-    "| Metric                  | Unit       | State of the Art | Cornell University | Goal | TT10 |\n",
-    "|-------------------------|-----------|------------------|--------------------|------|------|\n",
-    "| Total Power            | P [W]     | TBD              | TBD                | TBD  | TBD  |\n",
-    "| Area                   | A [m²]    | TBD              | TBD                | TBD  | TBD  |\n",
-    "| Volume                 | V [m³]    | TBD              | TBD                | TBD  | TBD  |\n",
-    "| Power/Area             | P'' [W/m²]  | TBD              | TBD                | TBD  | TBD  |\n",
-    "| Power/Volume           | P''' [W/m³] | TBD              | TBD                | TBD  | TBD  |\n",
-    "| Efficiency             | η_PH [-]  | TBD              | TBD                | TBD  | TBD  |\n",
-    "| Environment Independence | TBD      | TBD              | TBD                | TBD  | TBD  |\n",
-    "\n",
-    " ### Power Distribution (PD) \n",
-    " (e.g Driver)\n",
-    "| Metric                  | Unit       | State of the Art | Cornell University | Goal | TT10 |\n",
-    "|-------------------------|-----------|------------------|--------------------|------|------|\n",
-    "| TBD            | TBD    | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD                   | TBD    | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD                 | TBD    | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD             | TBD    | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD           | TBD    | TBD              | TBD                | TBD  | TBD  |\n",
-    "| Efficiency             | η_PD [-]  | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD | TBD      | TBD              | TBD                | TBD  | TBD  |\n",
-    "\n",
-    "### Power Conversion (PC) aka Actuators \n",
-    "(e.g. piezoelectric crystal)\n",
-    "| Metric                  | Unit       | State of the Art | Cornell University | Goal | TT10 |\n",
-    "|-------------------------|-----------|------------------|--------------------|------|------|\n",
-    "| TBD            | TBD    | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD                   | TBD    | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD                 | TBD    | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD             | TBD    | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD           | TBD    | TBD              | TBD                | TBD  | TBD  |\n",
-    "| Efficiency             | η_PC [-]  | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD | TBD      | TBD              | TBD                | TBD  | TBD  |\n",
-    "\n",
-    "### Power Application (PA) \n",
-    "(e.g. Gait + friction)\n",
-    "| Metric                  | Unit       | State of the Art | Cornell University | Goal | TT10 |\n",
-    "|-------------------------|-----------|------------------|--------------------|------|------|\n",
-    "| TBD            | TBD    | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD                   | TBD    | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD                 | TBD    | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD             | TBD    | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD           | TBD    | TBD              | TBD                | TBD  | TBD  |\n",
-    "| Efficiency             | η_PD [-]  | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD | TBD      | TBD              | TBD                | TBD  | TBD  |\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "## Data requirements:\n",
-    "In this first Iteration I mainly focus on Actuation and minimal Communication capabilities without any Sensors. Therefore no ADCs needed and Communication is mainly used for\n",
-    "Position detection and getting commands from outside to change direction or change movement speed.\n",
-    "### Data Harvesting Function Block (DH) aka Sensors\n",
-    "| Metric                  | Unit       | State of the Art | Cornell University | Goal | TT10 |\n",
-    "|-------------------------|-----------|------------------|--------------------|------|------|\n",
-    "| TBD            | TBD    | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD                   | TBD    | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD                 | TBD    | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD             | TBD    | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD           | TBD    | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD             | TBD  | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD | TBD      | TBD              | TBD                | TBD  | TBD  |\n",
-    "\n",
-    "\n",
-    "### Storage Function Block (DS) aka Memory\n",
-    "| Metric                  | Unit       | State of the Art | Cornell University | Goal | TT10 |\n",
-    "|-------------------------|-----------|------------------|--------------------|------|------|\n",
-    "| TBD            | TBD    | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD                   | TBD    | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD                 | TBD    | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD             | TBD    | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD           | TBD    | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD             | TBD  | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD | TBD      | TBD              | TBD                | TBD  | TBD  |\n",
-    "\n",
-    "\n",
-    "### Conversion Function Block (DC) aka Computing\n",
-    "| Metric                  | Unit       | State of the Art | Cornell University | Goal | TT10 |\n",
-    "|-------------------------|-----------|------------------|--------------------|------|------|\n",
-    "| TBD            | TBD    | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD                   | TBD    | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD                 | TBD    | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD             | TBD    | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD           | TBD    | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD             | TBD  | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD | TBD      | TBD              | TBD                | TBD  | TBD  |\n",
-    "\n",
-    "### Distribution Functional Block (DD) aka Communication\n",
-    "| Metric                  | Unit       | State of the Art | Cornell University | Goal | TT10 |\n",
-    "|-------------------------|-----------|------------------|--------------------|------|------|\n",
-    "| TBD            | TBD    | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD                   | TBD    | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD                 | TBD    | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD             | TBD    | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD           | TBD    | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD             | TBD  | TBD              | TBD                | TBD  | TBD  |\n",
-    "| TBD | TBD      | TBD              | TBD                | TBD  | TBD  |\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
    ]
   },
   {
